syntax = "proto3";

package chat;

option go_package = "backend/pkg/gen/user;user";

service ChatService {
  rpc GetDialogs(GetDialogsRequest) returns (GetDialogsResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

// Запрос списка диалогов для пользователя
message GetDialogsRequest {
  uint32 user_id = 1;
}

message DialogSummary {
  uint32 dialog_id = 1;
  repeated uint32 participant_ids = 2;
  string last_message = 3;
  int64 last_updated = 4;
}

message GetDialogsResponse {
  repeated DialogSummary dialogs = 1;
}

// Запрос сообщений по диалогу
message GetMessagesRequest {
  uint32 dialog_id = 1;
}

message Message {
  uint32 id = 1;
  uint32 sender_id = 2;
  string text = 3;
  int64 timestamp = 4;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

// Отправка сообщения
message SendMessageRequest {
  uint32 sender_id = 1;
  uint32 dialog_id = 2;
  string text = 3;
}

message SendMessageResponse {
  bool success = 1;
}



